<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/windowBorderLeft" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutAppAuthor"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    
    <TextView
        android:id="@+id/aboutAppVersion" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/aboutAppVersion" />

    <LinearLayout
        android:id="@+id/aboutAppSocialIcons2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/aboutAppVersion"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/marginBottom">
        
        <ImageView 
            android:id="@+id/aboutAppShareSk"
            android:layout_width="@dimen/socialButtonHeight"
            android:layout_height="@dimen/socialButtonHeight"
            android:src="@drawable/s_logo_solid"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/marginRight"
            android:clickable="true"
            android:scaleType="fitCenter"/>
        
        <ImageView 
            android:id="@+id/aboutAppShareLI"
            android:layout_width="@dimen/socialButtonHeight"
            android:layout_height="@dimen/socialButtonHeight"
            android:src="@drawable/inbug_60px_r"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/marginRight"
            android:clickable="true"
            android:scaleType="fitCenter"/>
        
        <ImageView 
            android:id="@+id/aboutAppShareEm"
            android:layout_width="@dimen/socialButtonHeight"
            android:layout_height="@dimen/socialButtonHeight"
            android:src="@drawable/ic_action_email"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/marginRight"
            android:clickable="true"
            android:scaleType="fitCenter"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/aboutAppSocialIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/aboutAppSocialIcons2"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/marginBottom" >
        
        <ImageView
            android:id="@+id/aboutAppShareVK"
            android:layout_width="@dimen/socialButtonHeight"
            android:layout_height="@dimen/socialButtonHeight"
            android:src="@drawable/vk_share_32"
            android:layout_marginRight="@dimen/marginRight"
            android:clickable="true"
            android:scaleType="fitCenter"/>
        
        <ImageView 
            android:id="@+id/aboutAppShareFB"
            android:layout_width="@dimen/socialButtonHeight"
            android:layout_height="@dimen/socialButtonHeight"
            android:src="@drawable/fb_logo_blue_50"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/marginRight"
            android:clickable="true"
            android:scaleType="fitCenter"/>
        
        <ImageView 
            android:id="@+id/aboutAppShareTw"
            android:layout_width="@dimen/socialButtonHeight"
            android:layout_height="@dimen/socialButtonHeight"
            android:src="@drawable/twitter_logo_blue"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/marginRight"
            android:clickable="true"
            android:scaleType="fitCenter"/>
        
        <ImageView 
            android:id="@+id/aboutAppShareGP"
            android:layout_width="@dimen/socialButtonHeight"
            android:layout_height="@dimen/socialButtonHeight"
            android:src="@drawable/btn_g_normal"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/marginRight"
            android:clickable="true"
            android:scaleType="fitCenter"/>
        
    </LinearLayout>
    
    <TextView 
        android:id="@+id/aboutAppShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutAppShare"
        android:layout_above="@id/aboutAppSocialIcons"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/marginBottom" />
    
</RelativeLayout>